--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sol-flattener",
+  "name": "@ericxstone/sol-flattener",
   "version": "1.0.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
